# cuda_opengl_cmake

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cudahelperlib.h  kernel.h
src/: cudahelperlib.cu  kernel.cu  main.cpp
